fixed word wrap for mobiles

--- a/scss/_overrides.scss
+++ b/scss/_overrides.scss
@@ -49,7 +49,7 @@
 }
 .articles {
 	margin: 5rem 0;
-	margin-top: -200px;
+	// margin-top: -200px;
 }
 .articles .content p {
 	line-height: 1.9;
